--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.30.2",
+    "three": "^0.181.2",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
